--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,8 @@
+[build-system]
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "elixirconf"
 version = "0.1.0"
-dependencies = [
-  "singlestoredb",
-  "python-dotenv",
-]
+dependencies = []
