--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,20 @@
+annotated-types==0.7.0
+anyio==4.10.0
 build==1.3.0
 certifi==2025.8.3
 charset-normalizer==3.4.3
--e git+ssh://git@github.com/singlestore-labs/elixirconf-demo.git@f0e07d65bf6c3ed9aed796044247606ad7296375#egg=elixirconf
+distro==1.9.0
+-e git+ssh://git@github.com/singlestore-labs/elixirconf-demo.git@dbd7711f7c1f013cf6058e4ff1f4b2859b87c33b#egg=elixirconf
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
+jiter==0.10.0
+openai==1.100.0
 packaging==25.0
 parsimonious==0.10.0
+pydantic==2.11.7
+pydantic_core==2.33.2
 PyJWT==2.10.1
 pyproject_hooks==1.2.0
 python-dotenv==1.1.1
@@ -12,6 +22,10 @@ regex==2025.7.34
 requests==2.32.4
 setuptools==80.9.0
 singlestoredb==1.15.1
+sniffio==1.3.1
 sqlparams==6.2.0
+tqdm==4.67.1
+typing-inspection==0.4.1
+typing_extensions==4.14.1
 urllib3==2.5.0
 wheel==0.45.1
